Fixed align on h

--- a/.metalsmith/sass/style.scss
+++ b/.metalsmith/sass/style.scss
@@ -86,7 +86,6 @@ h1 {
 }
 h2, h3 {
   font-size: 22px;
-  margin-left: 10px;
 }
 h3 {
   font-weight: normal;
